--- a/simon0/index.html
+++ b/simon0/index.html
@@ -19,7 +19,7 @@
             <button id="start">START</button>
             <button id="reset">RESET</button>
         </div>
-        <button id="rankingBtn">Ver Ranking</button>
+        <button id="rankingBtn">Ranking</button>
         <p id="message"></p>
     </div>
 
